--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4968,7 +4968,8 @@ ul.nav_menu_1 {
         width: 65.88078%;
 
         .nav-links-logos{
-                margin: 5px 0 30px 0;
+                margin: 10px 0px 0px 18px;
+
                 ol {
                     display:inline;
                     list-style-type: none;
@@ -4989,7 +4990,7 @@ ul.nav_menu_1 {
             }
 
             .nav-legal{
-                margin: -4px 0 5px 0;
+                margin: 0px 0px 0px 20px;
                 ol {
                     display:inline;
                     list-style-type: none;
@@ -5209,3 +5210,7 @@ ul.nav_menu_1 {
 .enroll-act_lbl{
     color: #0c2944;
 }
+
+
+
+
