--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer_clix.html
@@ -20,31 +20,31 @@
             </ol>
           </nav>
           <div class="row wrapper-logo">
-            <div class="small-3 medium-2 large-2 columns footer-logo">
+            <div class="small-3 medium-3 large-3 columns ">
               <p>
                 <a href="http://tatatrusts.org/" target="_blank">
-                    <img src="/static/ndf/images/tatatrusts.png" style="height:15px;padding-left:0px;" class=""/>
+                    <img src="/static/ndf/images/tata-trusts-logo.svg" style="padding-top:90px;" />
                 </a>
               </p>
             </div>
-            <div class="small-3 medium-1 large-1 columns footer-logo">
+            <div class="small-3 medium-3 large-3 columns ">
               <p>
                 <a href="http://www.mit.edu" target="_blank">
-                    <img src="/static/ndf/images/mit-logo.png" style="height:28px;" class=""/>
+                    <img src="/static/ndf/images/mit-logo.svg" style="padding-top:70px;"/>
                 </a>
               </p>
             </div>
-            <div class="small-3 medium-1 large-1 columns footer-logo">
+            <div class="small-3 medium-3 large-2 columns">
               <p>
                 <a href="http://www.tiss.edu/" target="_blank" >
-                    <img src="/static/ndf/images/logos/tiss-logo-text.svg" style="height:45px;width:50px" class=""/>
+                    <img src="/static/ndf/images/logos/tiss-logo-text.svg"/>
                 </a>
               </p>
             </div>
-            <div class="small-3 medium-2 large-2 columns footer-logo">
+            <div class="small-3 medium-3 large-2 columns">
               <p>
                 <a href="http://www.hbcse.tifr.res.in/" target="_blank">
-                    <img src="/static/ndf/images/logos/tifr.png" class=""/>
+                    <img src="/static/ndf/images/logos/tifr.png" style="padding-top:66px;"/>
                 </a>
               </p>
             </div>
