Hi and Te version added for runkitty run

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -35,7 +35,13 @@
                     <button type="button"  class="right orange-button" id="insert_geogebra_geometric_reasoning" >{% trans "Insert Geogebra Geometric Reasoning" %}</button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_runkittyrun" >{% trans "Insert Run Kitty Run" %}</button>
+                    <button type="button"  class="right orange-button " id="insert_runkittyrun_en" >{% trans "Insert Run Kitty Run (en)" %}</button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_runkittyrun_hi" >{% trans "Insert Run Kitty Run (hi)" %}</button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_runkittyrun_te" >{% trans "Insert Run Kitty Run (te)" %}</button>
                 </div>
                 <div class="inner">
                     <button type="button"  class="right orange-button " id="insert_turtle" >{% trans "Insert TurtleJS" %}</button>
