--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
@@ -13,7 +13,7 @@
     {% include 'ndf/widget_user_access_modal.html' %}
         <div class="row">
         {% if user.is_authenticated  %}
-            {% if title == "raw material"   and is_gstaff %}
+            {% if title == "raw material" and is_gstaff %}
                 <button type="button" class="right orange-button createAsset">
                     <i class="fi-plus"> </i>{% trans "Add Resource" %} 
                 </button>
@@ -58,3 +58,22 @@
     </a>
     {% endfor %}
 </div>
+
+<script type="text/javascript">
+   $( ".createAsset" ).click(function() {
+                   var asset_id = $(this).attr('data-asset_id');
+                   $.ajax({
+                             type: "GET",
+                             url: "{% url 'add_asset' group_id %}",
+                             data: {
+                               node_id: asset_id,
+                               "title" : '{{title}}'
+                             },
+                             datatype: "html",
+                             success: function(data) {
+                               $('#addAsset').foundation('reveal', 'open');
+                               $('#addAsset').html(data);
+                           }
+                     });
+           });
+</script> 
