--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
@@ -89,15 +89,16 @@
     $(document).ready(function(){
 
       user_id_list = {{request.session.buddies_userid_list}}
-      group_member_ids = {{group_object.author_set}}
-      isSuperset = user_id_list.every(function(val) {
-        return group_member_ids.indexOf(val) >= 0; 
-      });
+      {% if group_object.author_set %}
+        group_member_ids = {{group_object.author_set}}
+        isSuperset = user_id_list.every(function(val) {
+          return group_member_ids.indexOf(val) >= 0; 
+        });
 
-      if (isSuperset){
-        $(".enroll_all_users").addClass("hide")
-      }
-
+        if (isSuperset){
+          $(".enroll_all_users").addClass("hide")
+        }
+      {% endif %}
     })
   {% endif %}
 
