Manage Users: On hover, provide checkboxes to subscribe/unsubscribe the users; On hover, enlarge the checkboxes; Remove double scroll by removing height constraint of widget container.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5212,5 +5212,11 @@ ul.nav_menu_1 {
 }
 
 
+.user_mgmt_chk{
+    &:hover {
+        width: 30px; /*Desired width*/
+        height: 30px; /*Desired height*/
+        cursor: pointer;
+    }
 
-
+}
